:bug:  Adding custom regex in class-name-format
- Unit tests added
- Implementing custom regex for class-name-format

--- a/tests/sass/class-name-format.scss
+++ b/tests/sass/class-name-format.scss
@@ -133,3 +133,16 @@
 .strict-bem__elem_key--fail {
   color: red;
 }
+
+// Ignore pattern
+.myAppPrefix {
+  color: red;
+
+  .nested {
+    height: 10px;
+  }
+}
+
+.myAppPrefix__ele {
+  color: red;
+}
