--- a/tests/sass/class-name-format.sass
+++ b/tests/sass/class-name-format.sass
@@ -94,3 +94,13 @@
 
 .strict-bem__elem_key--fail
   color: red
+
+// Ignore pattern
+.myAppPrefix
+  color: red
+
+  .nested
+    height: 10px
+
+.myAppPrefix__ele
+  color: red
